objects/FLODocs__FLO_Junction__c.object
<CustomObject>
    <description>Custom Object to have Relationships between the most important Strongpoint objects such as Process, Customization, Change Request. This will be used to bind data into Rich Text Areas and to have many to many relationships.</description>
    <fields>
        <fullName>FLODocs__Approver_Order__c</fullName>
        <label>Approver Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Source_Name__c</fullName>
        <description>Name of the Customization Source when the relationship is between Customizations</description>
        <formula>FLODocs__FLO_Customization_Source__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Customization Source when the relationship is between Customizations</inlineHelpText>
        <label>Customization Source Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Target_Name__c</fullName>
        <description>Name of the Target customizations when the relationship for this FLO Junction is between customizations</description>
        <formula>FLODocs__FLO_Customization_Target__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Target customizations when the relationship for this FLO Junction is between customizations</inlineHelpText>
        <label>Customization Target Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Target_Record_Id__c</fullName>
        <description>Record Id of the data record associated with a Change Request.</description>
        <inlineHelpText>Record Id of the data record associated with a Change Request.</inlineHelpText>
        <label>Data Target Record Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Target_Record_Name__c</fullName>
        <description>Name of the data record that is associated with the Change Request.</description>
        <inlineHelpText>Name of the data record that is associated with the Change Request.</inlineHelpText>
        <label>Data Target Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Target_SObject_Api__c</fullName>
        <description>For a data record associated with a Change Request, this is the SObject Api name.</description>
        <inlineHelpText>For a data record associated with a Change Request, this is the SObject Api name.</inlineHelpText>
        <label>Data Target SObject Api</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Change_Request_Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Change Request source in the rel between FLO Objects to represent a Join (e.g: CR with Customizations)</description>
        <inlineHelpText>Change Request source in the rel between FLO Objects to represent a Join (e.g: CR with Customizations)</inlineHelpText>
        <label>Change Request Source</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Junctions</relationshipLabel>
        <relationshipName>FLO_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Change_Request_Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to FLO Change request as Target in the relationship between FLO Objects (e.g: Process to CR, Customizations with Change Request)</description>
        <inlineHelpText>Lookup to FLO Change request as Target in the relationship between FLO Objects (e.g: Process to CR, Customizations with Change Request)</inlineHelpText>
        <label>Change Request Target</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Junctions (Change Request Target)</relationshipLabel>
        <relationshipName>FLO_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Customization_Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>FLO Customization Source in the relationship between FLO Objects (e.g: Customization to Customization to represent a Join )</description>
        <inlineHelpText>FLO Customization Source in the relationship between FLO Objects (e.g: Customization to Customization to represent a Join )</inlineHelpText>
        <label>Customization Source</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Junctions</relationshipLabel>
        <relationshipName>FLO_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Customization_Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This represent the FLO Customization record as the Target of the relationship between two FLO Objects</description>
        <inlineHelpText>This represent the FLO Customization record as the Target of the relationship between two FLO Objects</inlineHelpText>
        <label>Customization Target</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Junctions (FLO Customization Target)</relationshipLabel>
        <relationshipName>FLO_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Parent_Change_Request_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Change Request Source</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Junctions (Parent Change Request Source)</relationshipLabel>
        <relationshipName>Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Process_Issue_Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>FLO process issue lookup as the source of this relationship in this FLO Junction (e.g: Process Issue with Customization)</description>
        <inlineHelpText>FLO process issue lookup as the source of this relationship in this FLO Junction (e.g: Process Issue with Customization)</inlineHelpText>
        <label>Process Issue Source</label>
        <referenceTo>FLODocs__FLO_Process_Issue__c</referenceTo>
        <relationshipLabel>Junctions</relationshipLabel>
        <relationshipName>FLO_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Process_Issue_Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>FLO Process issue as target in the relationship between Process Issues and other objects in this FLO Junction (e.g: Change Request with Process Issue)</description>
        <inlineHelpText>FLO Process issue as target in the relationship between Process Issues and other objects in this FLO Junction (e.g: Change Request with Process Issue)</inlineHelpText>
        <label>Process Issue Target</label>
        <referenceTo>FLODocs__FLO_Process_Issue__c</referenceTo>
        <relationshipLabel>Junctions (FLO Process Issue Target)</relationshipLabel>
        <relationshipName>FLO_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Process_Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the FLO Process as source in the relationship between FLO Objects (e.g: Process with Customization)</description>
        <inlineHelpText>Lookup to the FLO Process as source in the relationship between FLO Objects (e.g: Process with Customization)</inlineHelpText>
        <label>Process Source</label>
        <referenceTo>FLODocs__FLO_Process__c</referenceTo>
        <relationshipLabel>Junctions</relationshipLabel>
        <relationshipName>FLO_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Process_Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to FLO Process as target in the relationship between Process(es) and Customizations, or Change Request to Process(es), etc.</description>
        <inlineHelpText>Lookup to FLO Process as target in the relationship between Process(es) and Customizations, or Change Request to Process(es), etc.</inlineHelpText>
        <label>Process Target</label>
        <referenceTo>FLODocs__FLO_Process__c</referenceTo>
        <relationshipLabel>Junctions (Process Target)</relationshipLabel>
        <relationshipName>FLO_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Process_Type__c</fullName>
        <description>Type of the Process related to a Change Request. (e.g: Impacted Process, Affected Process, etc)</description>
        <inlineHelpText>Type of the Process related to a Change Request. (e.g: Impacted Process, Affected Process, etc)</inlineHelpText>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affected</fullName>
                </value>
                <value>
                    <fullName>Impacted</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Field__c</fullName>
        <description>This represent the Join between objects. Used by Strongpoint to identify joins  between Change request and Customizations, Customizations itself, Process with Customizations, etc.</description>
        <inlineHelpText>This represent the Join between objects. Used by Strongpoint to identify joins  between Change request and Customizations, Customizations itself, Process with Customizations, etc.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Approver</fullName>
                </value>
                <value>
                    <fullName>Supporting Process</fullName>
                </value>
                <value>
                    <fullName>Visualforce Page</fullName>
                </value>
                <value>
                    <fullName>Workflow/Flow/Approval Process</fullName>
                    <color>#FFCC33</color>
                    <label>Workflow/Flow/Approval Process</label>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Apex Class/Trigger</fullName>
                </value>
                <value>
                    <fullName>Other Customization</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                    <color>#990000</color>
                    <label>Report</label>
                </value>
                <value>
                    <fullName>Process Audience</fullName>
                </value>
                <value>
                    <fullName>Process Editor</fullName>
                </value>
                <value>
                    <fullName>Script</fullName>
                    <color>#339999</color>
                    <label>Script</label>
                </value>
                <value>
                    <fullName>Parent</fullName>
                    <color>#006600</color>
                    <label>Parent</label>
                </value>
                <value>
                    <fullName>Data Source</fullName>
                    <color>#6633FF</color>
                    <label>Data Source</label>
                </value>
                <value>
                    <fullName>Process / Step</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Rollback Backup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Target__c</fullName>
        <description>Name of the Profile target from Process when select Process Audience</description>
        <inlineHelpText>Name of the Profile target from Process when select Process Audience</inlineHelpText>
        <label>Profile Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Role_Target_Name__c</fullName>
        <label>Role Target Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Role_Target__c</fullName>
        <label>Role Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__RollbackLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rollback Log</label>
        <referenceTo>FLODocs__Deplyoment_Log__c</referenceTo>
        <relationshipLabel>Junctions</relationshipLabel>
        <relationshipName>Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Clean_up_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Clean-up Rule</label>
        <referenceTo>FLODocs__Search_Clean_up_Rule__c</referenceTo>
        <relationshipLabel>Junctions</relationshipLabel>
        <relationshipName>Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Source_Type__c</fullName>
        <description>Metadata Type of the Customization Source</description>
        <formula>TEXT(FLODocs__FLO_Customization_Source__r.FLODocs__Salesforce_Types__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Metadata Type of the Customization Source</inlineHelpText>
        <label>Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Target_Type__c</fullName>
        <description>Metadata Type of this FLO Junction when Target is FLO Customization Record.</description>
        <formula>TEXT( FLODocs__FLO_Customization_Target__r.FLODocs__Salesforce_Types__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Metadata Type of this FLO Junction when Target is FLO Customization Record.</inlineHelpText>
        <label>Target Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__User_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User to be populated as Mandated, Additional, Approved By, Reject By. Also, user can be a Developer assigned to a Change Request for example.</description>
        <inlineHelpText>User to be populated as Mandated, Additional, Approved By, Reject By. Also, user can be a Developer assigned to a Change Request for example.</inlineHelpText>
        <label>User Target</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Approver</fullName>
                </value>
                <value>
                    <fullName>Approved By</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Deployment Assigned</fullName>
                </value>
                <value>
                    <fullName>Mandated Approver</fullName>
                </value>
                <value>
                    <fullName>Rejected By</fullName>
                </value>
                <value>
                    <fullName>Report Owner</fullName>
                </value>
                <value>
                    <fullName>Inactive Owner</fullName>
                </value>
                <value>
                    <fullName>Clean up rule owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Junction</label>
    <nameField>
        <displayFormat>Jun-{00000}</displayFormat>
        <label>FLO Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junctions</pluralLabel>
    <recordTypes>
        <fullName>FLODocs__Change_Request_to_Customization</fullName>
        <active>true</active>
        <label>Change Request to Customization</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Change_Request_to_Process</fullName>
        <active>true</active>
        <label>Change Request to Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Change_Request_to_User</fullName>
        <active>true</active>
        <label>Change Request to User</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Cleanup_Rule_to_User</fullName>
        <active>true</active>
        <label>Cleanup Rule to User</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Customization_to_Change_Request</fullName>
        <active>true</active>
        <label>Customization to Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Customization_to_Customization</fullName>
        <active>true</active>
        <description>Customization Junction Records</description>
        <label>Customization to Customization</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Customization_to_Process</fullName>
        <active>true</active>
        <label>Customization to Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Customization_to_Process_Issue</fullName>
        <active>true</active>
        <label>Customization to Process Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Process_Issue_to_Customization</fullName>
        <active>true</active>
        <label>Process Issue to Customization</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Process_to_Customization</fullName>
        <active>true</active>
        <label>Process to Customization</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Process_to_Process</fullName>
        <active>true</active>
        <label>Process to Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Process_to_User</fullName>
        <active>true</active>
        <label>Process to User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>